--- a/dpsd_simu.qsf
+++ b/dpsd_simu.qsf
@@ -56,3 +56,4 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VERILOG_FILE dpsd_simu.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name QIP_FILE ROM_SIN_12b_4096.qip
